# corona-pcap-processor

./: .gitignore  CLAUDE.md  OriginalBroadcastIAmSingle.pcap  README.md  agentic-sessions.md  corona_metrics.py  generate_corona_metrics.py  main.py  new_main.py  pyproject.toml  sample-pcap.pcap  sample-whois-iam.pcap
.github/workflows/: ci.yml
bacnet_analyzer/: __init__.py  analyzer.py  constants.py  corona_metrics.py  debug_utils.py  device_catalog.py  models.py  packet_processors.py  reporting.py  stats_collector.py
src/: cli.py  processor.py
src/bacnet_analyzer/: __init__.py  analyzer.py  constants.py  corona_metrics.py  debug_utils.py  device_catalog.py  models.py  packet_processors.py  reporting.py  stats_collector.py
tests/: test_cli.py  test_metrics.py  test_pcap_processor.py  validate_metrics.py
