[project]
name = "corona-pcap-processor"
version = "0.1.0"
description = "BACnet network traffic analyzer for PCAP files and Corona metrics generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ACE IoT" },
]
dependencies = [
    "python-libpcap>=0.5.2",
    "bacpypes3>=0.2.8",
    "rdflib>=6.3.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.1.3",
    "mypy>=1.5.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "UP", "I", "N", "W", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.isort]
known-first-party = ["bacnet_analyzer"]

[tool.black]
line-length = 100
target-version = ["py310"]