[project]
name = "corona-pcap-processor"
version = "0.1.1"
description = "BACnet network traffic analyzer for PCAP files and Corona metrics generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Andrew Rodgers", email = "andrew@aceiotsolutions.com" },
    { name = "ACE IoT Solutions", email = "operations@aceiotsolutions.com" },
]
dependencies = [
    "bacpypes3",
    "click>=8.1.8",
    "pydantic>=2.11.4",
    "python-libpcap>=0.5.2",
    "rdflib>=6.3.2",
]

[project.optional-dependencies]
dev = [
    "isort>=6.0.1",
    "ruff>=0.1.3",
    "mypy>=1.5.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
corona-pcap-processor = "cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
[lint]
select = ["E", "F", "UP", "I", "N", "W", "C90"]
ignore = ["E203", "E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.uv.sources]
bacpypes3 = { path = "../BACpypes3" }

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]
[lint.isort]
known-first-party = ["src", "bacnet_analyzer"]

